--- a/map/map.html
+++ b/map/map.html
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 
         <script src="js/jquery.gmapApi.js" type="text/javascript"></script>
-        <script src="js/gmapApi.js" type="text/javascript"></script>
+        <script src="js/100Tours_gmapApi.js" type="text/javascript"></script>
         
         
     </head>
