--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,16 +10,16 @@
 
         <link rel="stylesheet" href="css/main.css" type="text/css" />
 
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 
-        <script src="js/jquery.gmapApi.js" type="text/javascript"></script>
-        <script src="js/gmapApi.js" type="text/javascript"></script>
+        <script src="js/scripts.js" type="text/javascript"></script>
 
     </head>
     <body>
 
         <div id="gmap"></div>
+
+        <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
     </body>
 </html>
