--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
+        <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 
