--- a/map/home.html
+++ b/map/home.html
@@ -16,7 +16,7 @@
 
 
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places"></script>
 
         <script src="js/jquery.gmapApi.js" type="text/javascript"></script>
         <script src="js/home_gmapApi.js" type="text/javascript"></script>
@@ -26,10 +26,13 @@
     <body class="index">
        
         <div id="controls">
-            <form method="GET">
+            <form id="gmapFormSearch" method="GET">
 
-                <input id="inputGeoloc" type="text" value="" />
+                <input id="gmapInputAddress" type="text" value="" />
  
+                <input id="gmapInputLatitude" type="hidden" value="" /> 
+                <input id="gmapInputLongitude" type="hidden" value="" /> 
+                
                 <input type="submit" value="rechercher" />
             </form>
         </div>    
