test modules and templates

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,14 +10,14 @@
 
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
 
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+		<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>-->
 
 		<script src="/js/scripts.js" type="text/javascript"></script>
 
 	</head>
 	<body>
 
-		<header class="radiofrance">
+		<header class="radiofrance" style="display:none;">
 			<h2>RadioFrance</h2>
 			<a href="http://franceinter.fr" class="franceinter" target="_blank">FranceInter</a>
 			<a href="http://franceinfo.fr" class="franceinter" target="_blank">FranceInfo</a>
@@ -40,19 +40,19 @@
 				</div>
 
 				<div class="streetview">
-					<a href="" class="streetview">Les lieux mythiques</a>
+					<a href="" class="link">Les lieux mythiques</a>
 				</div>
 
 				<div class="winners">
-					<a href="/vainqueurs/">Têtes de vainqueurs</a>
+					<a href="" class="link">Têtes de vainqueurs</a>
 				</div>
 
 				<div class="fight">
-					<a href="/duels-de-legendes/">Votre duel de légendes</a>
+					<a href="/duels-de-legendes/" class="link">Votre duel de légendes</a>
 				</div>
 
 				<div class="tours">
-					<a href="/tours/">La carte des 100 tracés</a>
+					<a href="/tours/" class="link">La carte des 100 tracés</a>
 					<small>Explorez et comparez l'ensemble des tracés des 100 tours</small>
 				</div>
 
