--- a/web/src/index.html
+++ b/web/src/index.html
@@ -75,9 +75,7 @@
 				<header></header>
 				<div class="content">
 					<div class="left">
-						<div class="years">
-							1954
-						</div>
+						<div class="years"></div>
 						<div class="total_length">
 							<span>3210 km en moyenne</span>
 							<a href="/traces/1985/" class="min">2215 en 1985</a>
@@ -105,7 +103,7 @@
 					</div>
 					<div class="map-container">
 						<a href="/" class="back"><strong>&lt;-</strong> Retour</a>
-						<a href="/traces/1954/">Poitiers <strong>X</strong></a>
+						<a href=""><strong>X</strong></a>
 						<div id="gmap"></div>
 					</div>
 					<div class="right">
