--- a/web/src/index.html
+++ b/web/src/index.html
@@ -166,8 +166,8 @@
 			</div>
 
 			<div class="template" id="template-winner-tour">
-				<li class=":year">
-					<a href="#" class="pos-:pos" style="top::hpos;" title=":bulle">:pos_title</a>
+				<li class=":year pos-:pos">
+					<a href="#" style="top::hpos;" title=":bulle">:pos_title</a>
 					<div class="wins">:wins</div>
 					<div class="year">:year</div>
 				</li>
@@ -259,6 +259,6 @@
 		</div>
 
 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script> 
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
 	</body>
 </html>
