--- a/web/src/index.html
+++ b/web/src/index.html
@@ -158,7 +158,7 @@
 				<li class="winner :winner_id" data-winner-id=":winner_id" data-nb-wins=":nb_wins" data-win-ages=":win_ages">
 					<a href=":winner_url">
 						<img src=":portrait_url" alt="" class="portrait">
-						<div class="flag"><div class=":flag"></div></div>
+						<div class="flag"><img src=":flag_url" /></div>
 						<div class="name">:name<span>:safename</span></div>
 						<ul class="wins">:wins</ul>
 					</a>
@@ -179,7 +179,7 @@
 					<div class="left">
 						<img src="" alt="" class="portrait">
 						<div class="name"></div>
-						<div class="flag"><div></div></div>
+						<div class="flag"><img src=":flag_url" /></div>
 						<div class="birth"></div>
 						<p class="bio"></p>
 						<a href="" class="duel">Lancer un duel</a>
