update les vainqueurs

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -176,29 +176,31 @@
 			<div class="template" id="template-winners">
 				<header></header>
 				<div id="winner">
-					<div class="left">
+					<div class="top-winner-portrait left">
 						<img src="" alt="" class="portrait">
-						<div class="name"></div>
-						<div class="flag"><div></div></div>
-						<div class="birth"></div>
-						<p class="bio"></p>
-						<a href="" class="duel">Lancer un duel</a>
-					</div>
-					<div class="right">
+						<div class="top-winner-portrait-body">
+							<div class="name"></div>
+							<div class="flag"><div></div></div>
+							<div class="birth"></div>
+							<p class="bio"></p>
+							<a href="" class="duel">Lancer un duel</a>
+						</div><!-- .top-winner-portrait-body -->
+					</div><!-- .top-winner-portrait -->
+					<div class="top-winner-stats right">
 						<a href="/vainqueurs/" id="close">X</a>
-						<ul class="tours">
+						<ul class="unstyled tours">
 
 						</ul>
-						<ul class="legend">
+						<ul class="unstyled legend">
 							<li class="winner">Vainqueur</li>
 							<li class="position">Classement</li>
 							<li class="leg_win">Victoire d'étape</li>
 							<li class="abandon">Abandon</li>
 						</ul>
 					</div>
-				</div>
+				</div><!-- .top-winner-stats -->
 				<div class="winners_list">
-					<ul></ul>
+					<ul class="unstyled"></ul>
 				</div>
 				<div class="filters">
 					<div class="nb_wins">
