--- a/web/src/index.html
+++ b/web/src/index.html
@@ -155,7 +155,7 @@
 			</div>
 
 			<div class="template" id="template-winner">
-				<li class="winner :winner_id" data-winner-id=":winner_id" data-nb-wins=":nb_wins" data-win-ages=":win_ages">
+				<li class="winner :winner_id" data-winner-id=":winner_id" data-nb-wins=":nb_wins" data-win-ages=":win_ages" data-country=":country">
 					<a href=":winner_url">
 						<img src=":portrait_url" alt="" class="portrait">
 						<div class="flag"><img src=":flag_url" /></div>
