part Fight almost working

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -283,11 +283,15 @@
 				</div>
 				<div class="landscape"></div>
 				<div class="background"></div>
-				<div class="fighter_one">
-					<div class="name"></div>
-				</div>
-				<div class="fighter_two">
-					<div class="name"></div>
+				<div class="fighters">
+					<div class="fighter fighter_one">
+						<div class="name"></div>
+						<div class="result"></div>
+					</div>
+					<div class="fighter fighter_two">
+						<div class="name"></div>
+						<div class="result"></div>
+					</div>
 				</div>
 				<div class="foreground"></div>
 				<div class="forescape"></div>
@@ -295,6 +299,48 @@
 			</div>
 
 			<div class="template" id="template-fight-results">
+
+				<div class="fighter_one">
+					<div class="name"></div>
+					<div class="flag"><img src="" /></div>
+					<ul>
+						<li class="nb_leg_wins"></li>
+						<li class="pct_leading"></li>
+						<li class="average_speed"></li>
+						<li class="ahead_of_second"></li>
+						<li class="nb_wins"></li>
+						<li class="doping"></li>
+					</ul>
+					<div class="winner"></div>
+				</div>
+
+				<div class="legend">
+					<ul>
+						<li class="nb_leg_wins">Victoires <br />d'étapes</li>
+						<li class="pct_leading">Temps passé en <br />tête du général</li>
+						<li class="average_speed">Meilleure<br /> vitesse moyenne</li>
+						<li class="ahead_of_second">Meilleure avance <br />sur le deuxième</li>
+						<li class="nb_wins">Nombre de <br />victoires finales</li>
+						<li class="doping">Contrôle <br />antidopage</li>
+					</ul>
+					<a href="/duels-de-legendes/">Nouvelle Course</a>
+				</div>
+
+				<div class="fighter_one">
+					<div class="name"></div>
+					<div class="flag"><img src="" /></div>
+					<ul>
+						<li class="nb_leg_wins"></li>
+						<li class="pct_leading"></li>
+						<li class="average_speed"></li>
+						<li class="ahead_of_second"></li>
+						<li class="nb_wins"></li>
+						<li class="doping"></li>
+					</ul>
+					<div class="winner"></div>
+				</div>
+
+
 			</div>
 
 			<div id="template-header" class="template">
