Begin templating traces

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -78,28 +78,28 @@
 			<div id="template-traces" class="template">
 				<header></header>
 				<div class="content">
-					<div class="left">
+					<div class="traces-left left">
 						<div id="traces-years"></div>
-						<div class="figures">
+						<div class="figures traces-left-stats">
 							<div class="total_length">
 								<span class="current">xxx</span> km <small>en moyenne</small>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_legs">
+							<div class="nb_legs traces-left-stats">
 								<span class="current">xxx</span> étapes <small>en moyenne</small>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_concurrents">
+							<div class="nb_concurrents traces-left-stats">
 								<span class="current">xxx</span> au départ <small>en moyenne</small>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_finishers">
+							<div class="nb_finishers traces-left-stats">
 								<span class="current">xxx</span> à l'arrivée <small>en moyenne</small>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
@@ -112,7 +112,7 @@
 						<a href=""><strong>X</strong></a>
 						<div id="gmap"></div>
 					</div>
-					<div class="right disabled">
+					<div class="traces-rightright disabled">
 						<div class="winner">
 							<span>vainqueur</span>
 							<img src="/img/traces/vainqueur_silhouette.png" alt="" />
