--- a/web/src/index.html
+++ b/web/src/index.html
@@ -67,29 +67,29 @@
 			<div id="template-traces" class="template">
 				<header></header>
 				<div class="content">
-					<div class="traces-left left">
+					<div class="traces-left">
 						<div id="traces-years"></div>
-						<div class="figures traces-left-stats">
-							<div class="total_length">
-								<span class="current">xxx</span> km <small>en moyenne</small>
+						<div class="figures">
+							<div class="total_length traces-left-stats">
+								<p><span class="current">xxx</span> km <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
 							<div class="nb_legs traces-left-stats">
-								<span class="current">xxx</span> étapes <small>en moyenne</small>
+								<p><span class="current">xxx</span> étapes <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
 							<div class="nb_concurrents traces-left-stats">
-								<span class="current">xxx</span> au départ <small>en moyenne</small>
+								<p><span class="current">xxx</span> au départ <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
 							<div class="nb_finishers traces-left-stats">
-								<span class="current">xxx</span> à l'arrivée <small>en moyenne</small>
+								<p><span class="current">xxx</span> à l'arrivée <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
