Traces - Begin Layout Footer

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -101,7 +101,7 @@
 						<a href=""><strong>X</strong></a>
 						<div id="gmap"></div>
 					</div>
-					<div class="traces-rightright disabled">
+					<div class="traces-right disabled">
 						<div class="winner">
 							<span>vainqueur</span>
 							<img src="/img/traces/vainqueur_silhouette.png" alt="" />
