modif sidebar traces

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -103,7 +103,7 @@
 					</div>
 					<div class="traces-right disabled">
 						<div class="winner">
-							<span>vainqueur</span>
+							<span></span>
 							<img src="/img/traces/vainqueur_silhouette.png" alt="" />
 							<span class="name"><a href=""></a></span>
 							<div class="stats">
