--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,6 +9,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
+	    <link rel="shortcut icon" href="favicon.ico" />
+	    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+	    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png" />
+	    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png" />
 		<script src="/js/scripts.js" type="text/javascript"></script>
 
 	</head>
@@ -227,13 +231,10 @@
 
 			<div class="template" id="template-fight-home">
 				<header></header>
-
 				<div class="selector"></div>
-
-				<h3>Radio France<br /> Présente</h3>
-				<h2>Duels de Légendes</h2>
-
 				<div class="container">
+					<h3>Radio France<br /> Présente</h3>
+					<h2>Duels de Légendes</h2>
 					<div class="fighter_one left" data-fighter="fighter_one" data-id="">
 						<div class="name">Votre Joueur</div>
 						<div class="flag"><img src="" /></div>
