--- a/web/src/index.html
+++ b/web/src/index.html
@@ -233,8 +233,8 @@
 				<header></header>
 				<div class="selector"></div>
 				<div class="container">
-					<h3>Radio France<br /> Présente</h3>
-					<h2>Duels de Légendes</h2>
+					<h3 class="visuallyhidden">Radio France Présente</h3>
+					<h2 class="visuallyhidden">Duels de Légendes</h2>
 					<div class="fighter_one left" data-fighter="fighter_one" data-id="">
 						<div class="name">Votre Joueur</div>
 						<div class="flag"><img src="" /></div>
