skin right col traces

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -116,14 +116,14 @@
 								<div class="average_speed"></div>
 							</div>
 						</div>
-						<div class="second">
+						<div class="second podium">
 							<span class="pos"></span>
 							<div class="name"></div>
 							<div class="flag"><div></div></div>
 							<div class="ahead_of_second">
 							</div>
 						</div>
-						<div class="third">
+						<div class="third podium">
 							<span class="pos"></span>
 							<div class="name"></div>
 							<div class="flag"><div></div></div>
