Layout right traces

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -101,17 +101,16 @@
 						</div>
 					</div>
 					<div class="map-container">
-						<a href="/" class="back"><strong>&lt;-</strong> Retour</a>
-						<a href=""><strong>X</strong></a>
+						<a href="/" class="back">Retour</a>
 						<div id="gmap"></div>
 					</div>
 					<div class="traces-right disabled">
 						<div class="winner">
-							<span></span>
-							<img src="/img/traces/vainqueur_silhouette.png" alt="" />
-							<span class="name"><a href=""></a></span>
+							<img src="/img/traces/vainqueur_silhouette.png" alt="" class="winner-pic" />
+							<span class="winner-status"></span>
+							<span class="name"></span>
 							<div class="stats">
-								<div class="flag"><div></div></div>
+								<div class="flag"><img src="/img/pix.gif" alt="" /></div>
 								<div class="total_time"></div>
 								<div class="average_speed"></div>
 							</div>
@@ -119,18 +118,16 @@
 						<div class="second podium">
 							<span class="pos"></span>
 							<div class="name"></div>
-							<div class="flag"><div></div></div>
-							<div class="ahead_of_second">
-							</div>
+							<div class="flag"><img src="/img/pix.gif" alt="" /></div>
+							<div class="ahead_of_second"></div>
 						</div>
 						<div class="third podium">
 							<span class="pos"></span>
 							<div class="name"></div>
-							<div class="flag"><div></div></div>
-							<div class="ahead_of_third">
-							</div>
+							<div class="flag"><img src="/img/pix.gif" alt="" /></div>
+							<div class="ahead_of_third"></div>
 						</div>
-					</div>
+					</div><!-- .traces-right -->
 					<div class="bottom">
 						<div class="timeline">
 							<div class="slider"></div>
@@ -372,5 +369,6 @@
 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 		-->
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
+
 	</body>
 </html>
