begin tempalting lieux mythiques

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -222,7 +222,14 @@
 
 			<div class="template" id="template-streetview">
 				<header></header>
-				StreetView
+				<div class="streetview-left">
+
+				</div><!-- .streetview-left -->
+
+				<div class="streetview-right">
+
+				</div><!-- .streetview-right -->
+				
 				<footer></footer>
 			</div>
 
