--- a/web/src/index.html
+++ b/web/src/index.html
@@ -220,16 +220,47 @@
 				<footer></footer>
 			</div>
 
+			<div class="template" id="template-streetview-place">
+				<li class=":place_type">
+					<a href=":place_url">
+						<img src=":place_pic" alt="">
+						<div class="title">:place_title</div>
+					</a>
+				</li>
+			</div>
+
 			<div class="template" id="template-streetview">
 				<header></header>
 				<div class="streetview-left">
+					<div class="container">
+						<div class="list">
+							<div class="legend">
+								<div class="streetview">
+									Vues du Tour
+								</div>
+								<div class="hyperlapse">
+									Trajet Dynamique
+								</div>
+							</div>
+
+							<ul></ul>
+						</div>
+
+						<div class="detail">
+							<a href="/lieux-mythiques/">Liste</a>
+							<div class="title"></div>
+							<div class="desc"></div>
+							<div class="minimap"></div>
+						</div>
+
+					</div>
 
 				</div><!-- .streetview-left -->
 
 				<div class="streetview-right">
 
 				</div><!-- .streetview-right -->
-				
+
 				<footer></footer>
 			</div>
 
@@ -374,6 +405,8 @@
 		</div>
 
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
+
+		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 	</body>
 </html>
