part Fight : add random chooser

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -288,7 +288,7 @@
 			</div>
 
 			<div class="template" id="template-fight-selector">
-				<a class="random">Au hasard</a>
+				<a class="random" href="">Au hasard</a>
 				<ul class="tabs">
 					<li class="winners">Vainqueurs</li>
 					<li class="legends">Légendes du tour</li>
