Begin layout left tracés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -243,7 +243,7 @@
 								</div>
 							</div>
 
-							<ul></ul>
+							<ul class="unstyled streetview-list"></ul>
 						</div>
 
 						<div class="detail">
