fix streetview elt

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -221,10 +221,11 @@
 			</div>
 
 			<div class="template" id="template-streetview-place">
-				<li class=":place_type">
+				<li>
 					<a href=":place_url">
 						<img src=":place_pic" alt="">
 						<div class="title">:place_title</div>
+						<div class=":place_type"></div>
 					</a>
 				</li>
 			</div>
