layout sidebar tracés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -235,14 +235,14 @@
 				<div class="streetview-left">
 					<div class="container">
 						<div class="list">
-							<div class="legend">
-								<div class="streetview">
+							<ul class="unstyled streetview-header">
+								<li class="streetview">
 									Vues du Tour
-								</div>
-								<div class="hyperlapse">
+								</li>
+								<li class="hyperlapse">
 									Trajet Dynamique
-								</div>
-							</div>
+								</li>
+							</ul>
 
 							<ul class="unstyled streetview-list"></ul>
 						</div>
