add minimap to streetview

--- a/map/streetview.html
+++ b/map/streetview.html
@@ -34,12 +34,10 @@
             <input id="toggleStreeView" type="button" value="Toggle Street View"/>
         </div>
 
-
-        <div id="mapPreview">
-
+        <div id="container">
+            <div id="mapPreview"></div>
+            <div id="panoramaPreview" style="display:none"></div>
         </div>
-        
-        
 
 
 
