add Traces on main.js

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -103,7 +103,7 @@
 					</div>
 					<div class="map-container">
 						<a href="/" class="back">Retour</a>
-						<div id="gmap"></div>
+						<div id="gmap-traces"></div>
 					</div>
 					<div class="traces-right disabled">
 						<div class="winner">
