--- a/web/src/index.html
+++ b/web/src/index.html
@@ -64,7 +64,12 @@
 			<div id="template-search" class="template">
 				<header></header>
 				<div class="content">
-					<div id="gmap"></div>
+                                        <form id="city_search" method="get">
+						<input type="text" id="search" name="city" value="" placeholder="ville" />
+					</form>
+                                        <div class="map-container-full">
+                                            <div id="gmap-search"></div>
+                                        </div>
 				</div>
 				<footer></footer>
 			</div>
