--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,6 +14,7 @@
 	    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png" />
 	    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png" />
                 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places,geometry"></script>
+		<script src="/js/modernizr.js" type="text/javascript"></script>
 		<script src="/js/scripts.js" type="text/javascript"></script>
 
 	</head>
