Calage page tracés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -81,25 +81,25 @@
 					<div class="traces-left">
 						<div id="traces-years"></div>
 						<div class="figures">
-							<div class="total_length traces-left-stats">
+							<div class="total_length traces-left-stats clearfix">
 								<p><span class="current">xxx</span> km <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_legs traces-left-stats">
+							<div class="nb_legs traces-left-stats clearfix">
 								<p><span class="current">xxx</span> étapes <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_concurrents traces-left-stats">
+							<div class="nb_concurrents traces-left-stats clearfix">
 								<p><span class="current">xxx</span> au départ <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
-							<div class="nb_finishers traces-left-stats">
+							<div class="nb_finishers traces-left-stats clearfix">
 								<p><span class="current">xxx</span> à l'arrivée <small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
