--- a/web/src/index.html
+++ b/web/src/index.html
@@ -315,6 +315,7 @@
 			</div>
 
 			<div class="template" id="template-fight-start">
+				<header></header>
 				<div class="title">
 					<div></div>
 				</div>
@@ -333,6 +334,7 @@
 				<div class="foreground"></div>
 				<div class="forescape"></div>
 				<a href="" class="next">Épreuve Suivante</a>
+				<footer></footer>
 			</div>
 
 			<div class="template" id="template-fight-results">
