add map streetview

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -270,7 +270,9 @@
 				</div><!-- .streetview-left -->
 
 				<div class="streetview-right">
-
+                                    <div id="gmap-streetview">
+                                        
+                                    </div>
 				</div><!-- .streetview-right -->
 
 				<footer></footer>
