Fight : ajout tableau résultats

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -344,19 +344,21 @@
 					<div class="forescape"></div>
 					<a href="" class="next">Épreuve Suivante</a>
 				</div><!-- .fight-container -->
+				<div class="results"></div>
 				<footer></footer>
 			</div>
 
 			<div class="template" id="template-fight-results">
 
-				<div class="fighter_one">
+				<div class="fighter fighter_one">
 					<div class="name"></div>
 					<div class="flag"><img src="" /></div>
+					<div class="portrait"><img src="" /></div>
 					<ul>
 						<li class="nb_leg_wins"></li>
 						<li class="pct_leading"></li>
 						<li class="average_speed"></li>
-						<li class="ahead_of_second"></li>
+						<li class="ahead_of_2nd"></li>
 						<li class="nb_wins"></li>
 						<li class="doping"></li>
 					</ul>
@@ -368,21 +370,22 @@
 						<li class="nb_leg_wins">Victoires <br />d'étapes</li>
 						<li class="pct_leading">Temps passé en <br />tête du général</li>
 						<li class="average_speed">Meilleure<br /> vitesse moyenne</li>
-						<li class="ahead_of_second">Meilleure avance <br />sur le deuxième</li>
+						<li class="ahead_of_2nd">Meilleure avance <br />sur le deuxième</li>
 						<li class="nb_wins">Nombre de <br />victoires finales</li>
 						<li class="doping">Contrôle <br />antidopage</li>
 					</ul>
 					<a href="/duels-de-legendes/">Nouvelle Course</a>
 				</div>
 
-				<div class="fighter_one">
+				<div class="fighter fighter_two">
 					<div class="name"></div>
 					<div class="flag"><img src="" /></div>
+					<div class="portrait"><img src="" /></div>
 					<ul>
 						<li class="nb_leg_wins"></li>
 						<li class="pct_leading"></li>
 						<li class="average_speed"></li>
-						<li class="ahead_of_second"></li>
+						<li class="ahead_of_2nd"></li>
 						<li class="nb_wins"></li>
 						<li class="doping"></li>
 					</ul>
