mise en page duels

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -193,7 +193,7 @@
 							<li class="winner">Vainqueur</li>
 							<li class="position">Classement</li>
 							<li class="leg_win">Victoire d'étape</li>
-							<li class="abandon">Abandon</li>
+							<li class="abandon">Eliminé</li>
 						</ul>
 					</div>
 				</div><!-- .top-winner-stats -->
@@ -283,14 +283,14 @@
 					<h3 class="visuallyhidden">Radio France Présente</h3>
 					<h2 class="visuallyhidden">Duels de Légendes</h2>
 					<div class="fighter_one fighter" data-fighter="fighter_one" data-id="">
-						<div class="name">Votre Joueur</div>
+						<div class="name"><strong>Votre Joueur</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
 						<a href="" class="choose-fighter">Choisir un autre coureur</a>
 					</div>
 					<a href="" class="start">Start</a>
 					<div class="fighter_two fighter" data-fighter="fighter_two" data-id="">
-						<div class="name">Son Adversaire</div>
+						<div class="name"><strong>Son Adversaire</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
 						<a href="" class="choose-fighter">Choisir un autre coureur</a>
@@ -331,12 +331,14 @@
 							<div class="fighter-infos">
 								<div class="name"></div>
 								<div class="result"></div>
+								<div class="fighter-arrow"></div>
 							</div><!-- .fighter-infos -->
 						</div>
 						<div class="fighter fighter_two">
 							<div class="fighter-infos">
 								<div class="name"></div>
 								<div class="result"></div>
+								<div class="fighter-arrow"></div>
 							</div><!-- .fighter-infos -->
 						</div>
 					</div>
@@ -437,9 +439,6 @@
 				</div><!-- .footer-radios -->
 			</div><!-- #footer -->
 		</div>
-
-<!--		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>	-->
-
-
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
 	</body>
 </html>
