Calage timeline tracés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -135,18 +135,22 @@
 							<div class="ahead_of_third"></div>
 						</div>
 					</div><!-- .traces-right -->
-					<div class="bottom">
-						<div class="timeline">
-							<div class="slider"></div>
-							<ul></ul>
-						</div>
-						<div class="timeline-zoom">
-							<ul></ul>
-						</div>
-						<div class="selectors">
-							<label for="multi-select"><input type="checkbox" name="multi-select" id="multi-select">MultiSelection</label>
-							<label for="select-all"><input type="checkbox" name="select-all" id="select-all">Tout sélectionner</label>
-						</div>
+					<div class="bottom clearfix">
+						<div class="timeline-left">
+							<div class="timeline">
+								<div class="slider"></div>
+								<ul></ul>
+							</div>
+							<div class="timeline-zoom">
+								<ul></ul>
+							</div>
+						</div><!-- .timeline-left -->
+						<div class="timeline-right">
+							<div class="selectors">
+								<label for="multi-select"><input type="checkbox" name="multi-select" id="multi-select">MultiSelection</label>
+								<label for="select-all"><input type="checkbox" name="select-all" id="select-all">Tout sélectionner</label>
+							</div>
+						</div><!-- .timeline-right -->
 					</div>
 				</div>
 				<footer></footer>
