Styling placeholder footer vainqueurs

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -224,7 +224,7 @@
 					<div class="search filters-block">
 						<label for="winner_search">
 							Rechercher
-							<input type="text" name="winner_search" id="winner_search" placeholder="nom" />
+							<input type="text" name="winner_search" id="winner_search" placeholder="Nom" />
 						</label>
 					</div>
 				</div>
