update écran hp duels + gestion année 2013 dans affichage des tracés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -289,8 +289,8 @@
 					<h3 class="visuallyhidden">Radio France Présente</h3>
 					<h2 class="visuallyhidden">Duels de Légendes</h2>
 					<div class="fighter_pics">
-						<div id="fighter_one_pic"><img src="" alt=""></div>
-						<div id="fighter_two_pic"><img src="" alt=""></div>
+						<div id="fighter_one_pic"><img src="/img/duels/fighter-default.png" alt=""></div>
+						<div id="fighter_two_pic"><img src="/img/duels/fighter-default.png" alt=""></div>
 					</div>
 					<div class="fighter_one fighter" data-fighter="fighter_one" data-id="">
 						<div class="name"><strong>Votre Joueur</strong></div>
@@ -313,16 +313,16 @@
 				<div class="clearfix">
 					<a class="random left" href="">Au hasard</a>
 					<ul class="tabs left unstyled">
-						<li class="winners active"><a href="#winner-block">Vainqueurs</a></li>
-						<li class="legends"><a href="#legends-block">Légendes du tour</a></li>
+						<li class="winners"><a href="#winner-block">Vainqueurs</a></li>
+						<li class="legends active"><a href="#legends-block">Légendes du tour</a></li>
 					</ul>
 				</div>
-				<div class="winners clearfix" id="winner-block">
+				<div class="winners winner-block clearfix" id="winner-block">
 					<div class="winners_list">
 						<ul class="unstyled"></ul>
 					</div>
 				</div>
-				<div class="legends clearfix" id="legends-block">
+				<div class="legends winner-block clearfix" id="legends-block">
 					<div class="winners_list">
 						<ul class="unstyled"></ul>
 					</div>
